--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -713,13 +713,13 @@ hr.line-separator{
         }
         .social-media{
             position: absolute;
-            bottom: -120px;
+            padding: 100px 0;
             i{
                 color: $orange-3;
                 margin-bottom: 8px;
             }
             @media (max-width: 991px){
-                bottom: -100px;
+                padding: 75px 0;
             }
             @media (max-width: 767px){
                 display: none;
