--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10547,13 +10547,76 @@ hr.line-separator {
   z-index: -1; }
 
 /* line 790, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+.coming-soon-bg {
+  height: 100vh;
+  filter: blur(10px); }
+
+/* line 794, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
 .cs-main-content {
   position: absolute;
   top: 30%;
   left: 0;
   right: 0;
-  margin: auto;
-  text-align: center; }
+  width: 54%;
+  background: rgba(255, 255, 255, 0.5); }
+  /* line 801, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .cs-main-content img {
+    display: inline-block;
+    max-width: 100%;
+    height: auto;
+    width: 280px;
+    padding-left: 0.5rem; }
+  @media (max-width: 767px) {
+    /* line 808, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .cs-main-content .title {
+      font-size: 25px !important; } }
+  /* line 814, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .cs-main-content .subscribe-form input[type=text] {
+    height: 44px;
+    background-color: rgba(0, 0, 0, 0.2);
+    color: black;
+    border: none;
+    box-shadow: none;
+    border-radius: 0;
+    padding: 21px 10px 22px;
+    margin-bottom: 0; }
+  /* line 824, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .cs-main-content .subscribe-form .frm_fields_container {
+    display: flex;
+    align-items: baseline;
+    justify-content: end;
+    padding-left: 5px; }
+    /* line 829, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .cs-main-content .subscribe-form .frm_fields_container button {
+      height: 44px;
+      line-height: 44px;
+      text-align: center;
+      padding: 0 30px;
+      background: #f16624;
+      color: white;
+      font-weight: 700;
+      text-transform: uppercase;
+      border-radius: 4px;
+      border: 0;
+      margin: 0; }
+    @media (max-width: 767px) {
+      /* line 824, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+      .cs-main-content .subscribe-form .frm_fields_container {
+        display: inline;
+        text-align: center; } }
+  /* line 848, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .cs-main-content .social-media {
+    display: inline-block;
+    padding-left: 1rem; }
+    /* line 851, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .cs-main-content .social-media i {
+      color: #f16624;
+      margin-bottom: 8px; }
+  @media (max-width: 767px) {
+    /* line 794, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .cs-main-content {
+      width: 100%;
+      text-align: center; } }
 
 /* line 1, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
 .logo {
