--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -787,11 +787,74 @@ hr.line-separator{
         }
     }
 }
+.coming-soon-bg{
+    height: 100vh; 
+    filter: blur(10px);
+}
 .cs-main-content{
     position: absolute;
     top: 30%;
     left: 0;
     right: 0;
-    margin: auto;
-    text-align: center;
+    width: 54%;
+    background: rgba(255, 255, 255, 0.5);
+    img{
+        display: inline-block;
+        max-width: 100%;
+        height: auto;
+        width: 280px;
+        padding-left: 0.5rem
+    }
+    .title{
+        @media (max-width: 767px){
+            font-size: 25px !important;
+        }
+    }
+    .subscribe-form{
+        input[type=text]{
+            height: 44px;
+            background-color: rgba(0, 0, 0, 0.2);
+            color: black;
+            border: none;
+            box-shadow: none;
+            border-radius: 0;
+            padding: 21px 10px 22px;
+            margin-bottom: 0;
+        }
+        .frm_fields_container{
+            display: flex;
+            align-items: baseline;
+            justify-content: end;
+            padding-left: 5px;
+            button{
+                height: 44px;
+                line-height: 44px;
+                text-align: center;
+                padding: 0 30px;
+                background: $orange-3;
+                color: white;
+                font-weight: 700;
+                text-transform: uppercase;
+                border-radius: 4px;
+                border: 0;
+                margin: 0;
+            }
+            @media (max-width: 767px){
+                display: inline;
+                text-align: center;
+            }
+        }
+    }
+    .social-media{
+        display: inline-block;
+        padding-left: 1rem;
+        i{
+            color: $orange-3;
+            margin-bottom: 8px;
+        }
+    }
+    @media (max-width: 767px){
+        width: 100%;
+        text-align: center;
+    }
 }
